src/cpp/gde_c_interface.h

GDE_EXPORT void gde_classdb_register_extension_class_method(GDExtensionClassLibraryPtr p_library,
                                                            GDExtensionConstStringNamePtr p_class_name,
                                                            const GDExtensionClassMethodInfo *p_method_info);
GDE_EXPORT void gde_classdb_register_extension_class_property(GDExtensionClassLibraryPtr p_library,
                                                              GDExtensionConstStringNamePtr p_class_name,
                                                              const GDExtensionPropertyInfo *p_info,
                                                              GDExtensionConstStringNamePtr p_setter,
                                                              GDExtensionConstStringNamePtr p_getter);
GDE_EXPORT GDExtensionMethodBindPtr gde_classdb_get_method_bind(GDExtensionConstStringNamePtr p_classname,
                                                                GDExtensionConstStringNamePtr p_methodname,
                                                                GDExtensionInt p_hash);
GDE_EXPORT GDExtensionObjectPtr gde_classdb_construct_object(GDExtensionConstStringNamePtr p_classname);
GDE_EXPORT void gde_object_method_bind_call(GDExtensionMethodBindPtr p_method_bind, GDExtensionObjectPtr p_instance,
                                            const GDExtensionConstVariantPtr *p_args, GDExtensionInt p_arg_count,
                                            GDExtensionUninitializedVariantPtr r_ret, GDExtensionCallError *r_error);
GDE_EXPORT void gde_object_method_bind_ptrcall(GDExtensionMethodBindPtr p_method_bind, GDExtensionObjectPtr p_instance,
                                               const GDExtensionConstTypePtr *p_args, GDExtensionTypePtr r_ret);
GDE_EXPORT void *gde_object_get_instance_binding(GDExtensionObjectPtr p_o, void *p_token,
                                                 const GDExtensionInstanceBindingCallbacks *p_callbacks);
GDE_EXPORT void gde_object_set_instance_binding(GDExtensionObjectPtr p_o, void *p_token, void *p_binding,
                                                const GDExtensionInstanceBindingCallbacks *p_callbacks);
GDE_EXPORT void gde_object_set_instance(GDExtensionObjectPtr p_o, GDExtensionConstStringNamePtr p_classname,
                                        GDExtensionClassInstancePtr p_instance);
GDE_EXPORT GDExtensionObjectPtr gde_object_cast_to(GDExtensionConstObjectPtr p_object, void *p_class_tag);
GDE_EXPORT void gde_object_destroy(GDExtensionObjectPtr p_o);
GDE_EXPORT GDExtensionObjectPtr gde_ref_get_object(GDExtensionConstRefPtr p_ref);
GDE_EXPORT void gde_ref_set_object(GDExtensionRefPtr p_ref, GDExtensionObjectPtr p_object);
GDE_EXPORT GDExtensionScriptInstancePtr gde_script_instance_create(const GDExtensionScriptInstanceInfo *p_info,
                                                                   GDExtensionScriptInstanceDataPtr p_instance_data);
GDE_EXPORT GDExtensionScriptInstanceDataPtr gde_object_get_script_instance(GDExtensionConstObjectPtr p_object,
                                                                           GDExtensionObjectPtr p_language);