src/dart/godot_dart/lib/src/core/gdextension_ffi_bindings.dart


  void gde_classdb_register_extension_class_method(
    GDExtensionClassLibraryPtr p_library,
    GDExtensionConstStringNamePtr p_class_name,
    ffi.Pointer<GDExtensionClassMethodInfo> p_method_info,
  ) {
    return _gde_classdb_register_extension_class_method(
      p_library,
      p_class_name,
      p_method_info,
    );
  }

  late final _gde_classdb_register_extension_class_methodPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  GDExtensionClassLibraryPtr,
                  GDExtensionConstStringNamePtr,
                  ffi.Pointer<GDExtensionClassMethodInfo>)>>(
      'gde_classdb_register_extension_class_method');
  late final _gde_classdb_register_extension_class_method =
      _gde_classdb_register_extension_class_methodPtr.asFunction<
          void Function(
              GDExtensionClassLibraryPtr,
              GDExtensionConstStringNamePtr,
              ffi.Pointer<GDExtensionClassMethodInfo>)>();

  void gde_classdb_register_extension_class_property(
    GDExtensionClassLibraryPtr p_library,
    GDExtensionConstStringNamePtr p_class_name,
    ffi.Pointer<GDExtensionPropertyInfo> p_info,
    GDExtensionConstStringNamePtr p_setter,
    GDExtensionConstStringNamePtr p_getter,
  ) {
    return _gde_classdb_register_extension_class_property(
      p_library,
      p_class_name,
      p_info,
      p_setter,
      p_getter,
    );
  }

  late final _gde_classdb_register_extension_class_propertyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  GDExtensionClassLibraryPtr,
                  GDExtensionConstStringNamePtr,
                  ffi.Pointer<GDExtensionPropertyInfo>,
                  GDExtensionConstStringNamePtr,
                  GDExtensionConstStringNamePtr)>>(
      'gde_classdb_register_extension_class_property');
  late final _gde_classdb_register_extension_class_property =
      _gde_classdb_register_extension_class_propertyPtr.asFunction<
          void Function(
              GDExtensionClassLibraryPtr,
              GDExtensionConstStringNamePtr,
              ffi.Pointer<GDExtensionPropertyInfo>,
              GDExtensionConstStringNamePtr,
              GDExtensionConstStringNamePtr)>();

  GDExtensionMethodBindPtr gde_classdb_get_method_bind(
    GDExtensionConstStringNamePtr p_classname,
    GDExtensionConstStringNamePtr p_methodname,
    int p_hash,
  ) {
    return _gde_classdb_get_method_bind(
      p_classname,
      p_methodname,
      p_hash,
    );
  }

  late final _gde_classdb_get_method_bindPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionMethodBindPtr Function(
              GDExtensionConstStringNamePtr,
              GDExtensionConstStringNamePtr,
              GDExtensionInt)>>('gde_classdb_get_method_bind');
  late final _gde_classdb_get_method_bind =
      _gde_classdb_get_method_bindPtr.asFunction<
          GDExtensionMethodBindPtr Function(GDExtensionConstStringNamePtr,
              GDExtensionConstStringNamePtr, int)>();

  GDExtensionObjectPtr gde_classdb_construct_object(
    GDExtensionConstStringNamePtr p_classname,
  ) {
    return _gde_classdb_construct_object(
      p_classname,
    );
  }

  late final _gde_classdb_construct_objectPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionObjectPtr Function(
              GDExtensionConstStringNamePtr)>>('gde_classdb_construct_object');
  late final _gde_classdb_construct_object =
      _gde_classdb_construct_objectPtr.asFunction<
          GDExtensionObjectPtr Function(GDExtensionConstStringNamePtr)>();

  void gde_object_method_bind_call(
    GDExtensionMethodBindPtr p_method_bind,
    GDExtensionObjectPtr p_instance,
    ffi.Pointer<GDExtensionConstVariantPtr> p_args,
    int p_arg_count,
    GDExtensionUninitializedVariantPtr r_ret,
    ffi.Pointer<GDExtensionCallError> r_error,
  ) {
    return _gde_object_method_bind_call(
      p_method_bind,
      p_instance,
      p_args,
      p_arg_count,
      r_ret,
      r_error,
    );
  }

  late final _gde_object_method_bind_callPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  GDExtensionMethodBindPtr,
                  GDExtensionObjectPtr,
                  ffi.Pointer<GDExtensionConstVariantPtr>,
                  GDExtensionInt,
                  GDExtensionUninitializedVariantPtr,
                  ffi.Pointer<GDExtensionCallError>)>>(
      'gde_object_method_bind_call');
  late final _gde_object_method_bind_call =
      _gde_object_method_bind_callPtr.asFunction<
          void Function(
              GDExtensionMethodBindPtr,
              GDExtensionObjectPtr,
              ffi.Pointer<GDExtensionConstVariantPtr>,
              int,
              GDExtensionUninitializedVariantPtr,
              ffi.Pointer<GDExtensionCallError>)>();

  void gde_object_method_bind_ptrcall(
    GDExtensionMethodBindPtr p_method_bind,
    GDExtensionObjectPtr p_instance,
    ffi.Pointer<GDExtensionConstTypePtr> p_args,
    GDExtensionTypePtr r_ret,
  ) {
    return _gde_object_method_bind_ptrcall(
      p_method_bind,
      p_instance,
      p_args,
      r_ret,
    );
  }

  late final _gde_object_method_bind_ptrcallPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionMethodBindPtr,
              GDExtensionObjectPtr,
              ffi.Pointer<GDExtensionConstTypePtr>,
              GDExtensionTypePtr)>>('gde_object_method_bind_ptrcall');
  late final _gde_object_method_bind_ptrcall =
      _gde_object_method_bind_ptrcallPtr.asFunction<
          void Function(GDExtensionMethodBindPtr, GDExtensionObjectPtr,
              ffi.Pointer<GDExtensionConstTypePtr>, GDExtensionTypePtr)>();

  ffi.Pointer<ffi.Void> gde_object_get_instance_binding(
    GDExtensionObjectPtr p_o,
    ffi.Pointer<ffi.Void> p_token,
    ffi.Pointer<GDExtensionInstanceBindingCallbacks> p_callbacks,
  ) {
    return _gde_object_get_instance_binding(
      p_o,
      p_token,
      p_callbacks,
    );
  }

  late final _gde_object_get_instance_bindingPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  GDExtensionObjectPtr,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<GDExtensionInstanceBindingCallbacks>)>>(
      'gde_object_get_instance_binding');
  late final _gde_object_get_instance_binding =
      _gde_object_get_instance_bindingPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              GDExtensionObjectPtr,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<GDExtensionInstanceBindingCallbacks>)>();

  void gde_object_set_instance_binding(
    GDExtensionObjectPtr p_o,
    ffi.Pointer<ffi.Void> p_token,
    ffi.Pointer<ffi.Void> p_binding,
    ffi.Pointer<GDExtensionInstanceBindingCallbacks> p_callbacks,
  ) {
    return _gde_object_set_instance_binding(
      p_o,
      p_token,
      p_binding,
      p_callbacks,
    );
  }

  late final _gde_object_set_instance_bindingPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  GDExtensionObjectPtr,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<GDExtensionInstanceBindingCallbacks>)>>(
      'gde_object_set_instance_binding');
  late final _gde_object_set_instance_binding =
      _gde_object_set_instance_bindingPtr.asFunction<
          void Function(
              GDExtensionObjectPtr,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<GDExtensionInstanceBindingCallbacks>)>();

  void gde_object_set_instance(
    GDExtensionObjectPtr p_o,
    GDExtensionConstStringNamePtr p_classname,
    GDExtensionClassInstancePtr p_instance,
  ) {
    return _gde_object_set_instance(
      p_o,
      p_classname,
      p_instance,
    );
  }

  late final _gde_object_set_instancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(GDExtensionObjectPtr, GDExtensionConstStringNamePtr,
              GDExtensionClassInstancePtr)>>('gde_object_set_instance');
  late final _gde_object_set_instance = _gde_object_set_instancePtr.asFunction<
      void Function(GDExtensionObjectPtr, GDExtensionConstStringNamePtr,
          GDExtensionClassInstancePtr)>();

  GDExtensionObjectPtr gde_object_cast_to(
    GDExtensionConstObjectPtr p_object,
    ffi.Pointer<ffi.Void> p_class_tag,
  ) {
    return _gde_object_cast_to(
      p_object,
      p_class_tag,
    );
  }

  late final _gde_object_cast_toPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionObjectPtr Function(GDExtensionConstObjectPtr,
              ffi.Pointer<ffi.Void>)>>('gde_object_cast_to');
  late final _gde_object_cast_to = _gde_object_cast_toPtr.asFunction<
      GDExtensionObjectPtr Function(
          GDExtensionConstObjectPtr, ffi.Pointer<ffi.Void>)>();

  void gde_object_destroy(
    GDExtensionObjectPtr p_o,
  ) {
    return _gde_object_destroy(
      p_o,
    );
  }

  late final _gde_object_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GDExtensionObjectPtr)>>(
          'gde_object_destroy');
  late final _gde_object_destroy =
      _gde_object_destroyPtr.asFunction<void Function(GDExtensionObjectPtr)>();

  GDExtensionObjectPtr gde_ref_get_object(
    GDExtensionConstRefPtr p_ref,
  ) {
    return _gde_ref_get_object(
      p_ref,
    );
  }

  late final _gde_ref_get_objectPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionObjectPtr Function(
              GDExtensionConstRefPtr)>>('gde_ref_get_object');
  late final _gde_ref_get_object = _gde_ref_get_objectPtr
      .asFunction<GDExtensionObjectPtr Function(GDExtensionConstRefPtr)>();

  void gde_ref_set_object(
    GDExtensionRefPtr p_ref,
    GDExtensionObjectPtr p_object,
  ) {
    return _gde_ref_set_object(
      p_ref,
      p_object,
    );
  }

  late final _gde_ref_set_objectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionRefPtr, GDExtensionObjectPtr)>>('gde_ref_set_object');
  late final _gde_ref_set_object = _gde_ref_set_objectPtr
      .asFunction<void Function(GDExtensionRefPtr, GDExtensionObjectPtr)>();

  GDExtensionScriptInstancePtr gde_script_instance_create(
    ffi.Pointer<GDExtensionScriptInstanceInfo> p_info,
    GDExtensionScriptInstanceDataPtr p_instance_data,
  ) {
    return _gde_script_instance_create(
      p_info,
      p_instance_data,
    );
  }

  late final _gde_script_instance_createPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionScriptInstancePtr Function(
              ffi.Pointer<GDExtensionScriptInstanceInfo>,
              GDExtensionScriptInstanceDataPtr)>>('gde_script_instance_create');
  late final _gde_script_instance_create =
      _gde_script_instance_createPtr.asFunction<
          GDExtensionScriptInstancePtr Function(
              ffi.Pointer<GDExtensionScriptInstanceInfo>,
              GDExtensionScriptInstanceDataPtr)>();

  GDExtensionScriptInstanceDataPtr gde_object_get_script_instance(
    GDExtensionConstObjectPtr p_object,
    GDExtensionObjectPtr p_language,
  ) {
    return _gde_object_get_script_instance(
      p_object,
      p_language,
    );
  }

  late final _gde_object_get_script_instancePtr = _lookup<
      ffi.NativeFunction<
          GDExtensionScriptInstanceDataPtr Function(GDExtensionConstObjectPtr,
              GDExtensionObjectPtr)>>('gde_object_get_script_instance');
  late final _gde_object_get_script_instance =
      _gde_object_get_script_instancePtr.asFunction<
          GDExtensionScriptInstanceDataPtr Function(
              GDExtensionConstObjectPtr, GDExtensionObjectPtr)>();
}

typedef va_list = ffi.Pointer<ffi.Char>;

class __crt_locale_data_public extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedShort> _locale_pctype;

  @ffi.Int()
  external int _locale_mb_cur_max;

  @ffi.UnsignedInt()
  external int _locale_lc_codepage;
}
